# CodeEditor-Android

./: .gitignore  gradlew
.github/workflows/: build-apk.yml  build-release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/editor/: monaco.html
app/src/main/assets/terminal/: terminal.html
app/src/main/cpp/: CMakeLists.txt  native_runner.cpp  pty_jni.cpp
app/src/main/java/com/codeeditor/app/: CodeEditorApp.java  MainActivity.java  SettingsActivity.java
app/src/main/java/com/codeeditor/app/editor/: EditorActivity.java
app/src/main/java/com/codeeditor/app/filemanager/: FileItem.java  FileListAdapter.java  FileManagerActivity.java  SafHelper.java
app/src/main/java/com/codeeditor/app/runner/: NativeRunner.java  TerminalActivity.java  TerminalSession.java
app/src/main/java/com/codeeditor/app/terminal/: ProotSession.java  UbuntuManager.java
app/src/main/java/com/codeeditor/app/utils/: FileUtils.java  JniBridge.java  LanguageDetector.java  PreferenceManager.java
app/src/main/res/drawable/: bg_extension_badge.xml  bg_progress_bar.xml  bg_special_key.xml  ic_chevron_right.xml  ic_cpp.xml  ic_css.xml  ic_file.xml  ic_folder.xml  ic_format.xml  ic_goto_line.xml  ic_html.xml  ic_java.xml  ic_javascript.xml  ic_json.xml  ic_launcher_foreground.xml  ic_markdown.xml  ic_new_file.xml  ic_open_file.xml  ic_play.xml  ic_python.xml  ic_redo.xml  ic_refresh.xml  ic_replace.xml  ic_save.xml  ic_search.xml  ic_text.xml  ic_undo.xml  ic_xml.xml
app/src/main/res/layout/: activity_editor.xml  activity_file_manager.xml  activity_main.xml  activity_settings.xml  activity_terminal.xml  dialog_save_file.xml  item_file.xml
app/src/main/res/menu/: menu_editor.xml  menu_file_manager.xml  menu_main.xml  menu_terminal.xml
app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
